Issue 3134: Add precondition concerning --add-opens